# MetalTranslate

./: .gitignore  CMakeLists.txt  fix_ctranslate2.cmake
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
nodejs/: .release-it.json  index.js  package-lock.json  package.json
src/: MetalTranslate.cpp  MetalTranslate.h  MetalTranslateConfig.h  metal_api.cpp  metal_api.h
